fix: prose in dark mode, team list teaser

--- a/src/css/partials/prose.css
+++ b/src/css/partials/prose.css
@@ -462,7 +462,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .dark\:prose-invert {
+    .prose {
         --tw-prose-body: var(--tw-prose-invert-body);
         --tw-prose-headings: var(--tw-prose-invert-headings);
         --tw-prose-lead: var(--tw-prose-invert-lead);
